kadai_05/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION
    INTERVAL
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENT SEMICOLON outblock PERIOD
Rule 2     outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement
Rule 3     outblock_act -> <empty>
Rule 4     var_decl_part -> var_decl_list SEMICOLON
Rule 5     var_decl_part -> <empty>
Rule 6     var_decl_list -> var_decl_list SEMICOLON var_decl
Rule 7     var_decl_list -> var_decl
Rule 8     var_decl -> VAR id_list
Rule 9     subprog_decl_part -> subprog_decl_list SEMICOLON
Rule 10    subprog_decl_part -> <empty>
Rule 11    subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl
Rule 12    subprog_decl_list -> subprog_decl
Rule 13    subprog_decl -> proc_decl
Rule 14    proc_decl -> PROCEDURE proc_name SEMICOLON inblock
Rule 15    proc_name -> IDENT act_insert_prev_proc_ident
Rule 16    inblock -> var_decl_part statement
Rule 17    statement_list -> statement_list SEMICOLON statement
Rule 18    statement_list -> statement
Rule 19    statement -> assignment_statement
Rule 20    statement -> if_statement
Rule 21    statement -> while_statement
Rule 22    statement -> for_statement
Rule 23    statement -> proc_call_statement
Rule 24    statement -> null_statement
Rule 25    statement -> block_statement
Rule 26    statement -> read_statement
Rule 27    statement -> write_statement
Rule 28    assignment_statement -> IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident
Rule 29    act_assign_ident -> <empty>
Rule 30    if_statement -> act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
Rule 31    act_generate_labels -> <empty>
Rule 32    act_insert_br -> <empty>
Rule 33    act_insert_label1 -> <empty>
Rule 34    act_insert_label2 -> <empty>
Rule 35    act_insert_label3 -> <empty>
Rule 36    act_insert_jump1 -> <empty>
Rule 37    act_insert_jump2 -> <empty>
Rule 38    act_insert_jump3 -> <empty>
Rule 39    else_statement -> ELSE statement
Rule 40    else_statement -> <empty>
Rule 41    while_statement -> WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
Rule 42    act_insert_br_while -> <empty>
Rule 43    for_statement -> FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
Rule 44    act_insert_br_for -> <empty>
Rule 45    act_increment_itr -> <empty>
Rule 46    proc_call_statement -> proc_call_name
Rule 47    proc_call_name -> IDENT act_lookup_prev_ident
Rule 48    block_statement -> BEGIN statement_list END
Rule 49    read_statement -> READ LPAREN IDENT act_lookup_prev_ident RPAREN
Rule 50    write_statement -> WRITE LPAREN expression RPAREN
Rule 51    null_statement -> <empty>
Rule 52    condition -> expression EQ expression
Rule 53    condition -> expression NEQ expression
Rule 54    condition -> expression LT expression
Rule 55    condition -> expression LE expression
Rule 56    condition -> expression GT expression
Rule 57    condition -> expression GE expression
Rule 58    expression -> term
Rule 59    expression -> MINUS term
Rule 60    expression -> expression PLUS term
Rule 61    expression -> expression MINUS term
Rule 62    term -> f_actor
Rule 63    term -> term MULT f_actor
Rule 64    term -> term DIV f_actor
Rule 65    f_actor -> var_name
Rule 66    f_actor -> number
Rule 67    f_actor -> LPAREN expression RPAREN
Rule 68    var_name -> IDENT act_lookup_prev_ident
Rule 69    number -> NUMBER
Rule 70    id_list -> IDENT act_insert_prev_var_ident
Rule 71    id_list -> id_list COMMA IDENT act_insert_prev_var_ident
Rule 72    act_insert_prev_var_ident -> <empty>
Rule 73    act_insert_prev_proc_ident -> <empty>
Rule 74    act_lookup_prev_ident -> <empty>
Rule 75    act_set_varscope_local -> <empty>
Rule 76    act_set_varscope_global -> act_delete_local_ident
Rule 77    act_delete_local_ident -> <empty>

Terminals, with rules where they appear

ASSIGN               : 28 43
BEGIN                : 48
COMMA                : 71
DIV                  : 64
DO                   : 41 43
ELSE                 : 39
END                  : 48
EQ                   : 52
FOR                  : 43
FUNCTION             : 
GE                   : 57
GT                   : 56
IDENT                : 1 15 28 43 47 49 68 70 71
IF                   : 30
INTERVAL             : 
LBRACKET             : 
LE                   : 55
LPAREN               : 49 50 67
LT                   : 54
MINUS                : 59 61
MULT                 : 63
NEQ                  : 53
NUMBER               : 69
PERIOD               : 1
PLUS                 : 60
PROCEDURE            : 14
PROGRAM              : 1
RBRACKET             : 
READ                 : 49
RPAREN               : 49 50 67
SEMICOLON            : 1 4 6 9 11 14 17
THEN                 : 30
TO                   : 43
VAR                  : 8
WHILE                : 41
WRITE                : 50
error                : 

Nonterminals, with rules where they appear

act_assign_ident     : 28 43
act_delete_local_ident : 76
act_generate_labels  : 30 41 43
act_increment_itr    : 43
act_insert_br        : 30
act_insert_br_for    : 43
act_insert_br_while  : 41
act_insert_jump1     : 41 41 43 43
act_insert_jump2     : 
act_insert_jump3     : 30 30
act_insert_label1    : 30 41 43
act_insert_label2    : 30 41 43
act_insert_label3    : 30 41 43
act_insert_prev_proc_ident : 15
act_insert_prev_var_ident : 70 71
act_lookup_prev_ident : 28 43 47 49 68
act_set_varscope_global : 2
act_set_varscope_local : 2
assignment_statement : 19
block_statement      : 25
condition            : 30 41
else_statement       : 30
expression           : 28 43 43 50 52 52 53 53 54 54 55 55 56 56 57 57 60 61 67
f_actor              : 62 63 64
for_statement        : 22
id_list              : 8 71
if_statement         : 20
inblock              : 14
null_statement       : 24
number               : 66
outblock             : 1
outblock_act         : 2
proc_call_name       : 46
proc_call_statement  : 23
proc_decl            : 13
proc_name            : 14
program              : 0
read_statement       : 26
statement            : 2 16 17 18 30 39 41 43
statement_list       : 17 48
subprog_decl         : 11 12
subprog_decl_list    : 9 11
subprog_decl_part    : 2
term                 : 58 59 60 61 63 64
var_decl             : 6 7
var_decl_list        : 4 6
var_decl_part        : 2 16
var_name             : 65
while_statement      : 21
write_statement      : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENT SEMICOLON outblock PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENT SEMICOLON outblock PERIOD

    IDENT           shift and go to state 3


state 3

    (1) program -> PROGRAM IDENT . SEMICOLON outblock PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENT SEMICOLON . outblock PERIOD
    (2) outblock -> . var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 5 (var_decl_part -> .)
    IDENT           reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    PERIOD          reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    outblock                       shift and go to state 5
    var_decl_part                  shift and go to state 6
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 5

    (1) program -> PROGRAM IDENT SEMICOLON outblock . PERIOD

    PERIOD          shift and go to state 10


state 6

    (2) outblock -> var_decl_part . act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement
    (75) act_set_varscope_local -> .

    PROCEDURE       reduce using rule 75 (act_set_varscope_local -> .)
    IDENT           reduce using rule 75 (act_set_varscope_local -> .)
    WHILE           reduce using rule 75 (act_set_varscope_local -> .)
    FOR             reduce using rule 75 (act_set_varscope_local -> .)
    BEGIN           reduce using rule 75 (act_set_varscope_local -> .)
    READ            reduce using rule 75 (act_set_varscope_local -> .)
    WRITE           reduce using rule 75 (act_set_varscope_local -> .)
    IF              reduce using rule 75 (act_set_varscope_local -> .)
    PERIOD          reduce using rule 75 (act_set_varscope_local -> .)

    act_set_varscope_local         shift and go to state 11

state 7

    (4) var_decl_part -> var_decl_list . SEMICOLON
    (6) var_decl_list -> var_decl_list . SEMICOLON var_decl

    SEMICOLON       shift and go to state 12


state 8

    (7) var_decl_list -> var_decl .

    SEMICOLON       reduce using rule 7 (var_decl_list -> var_decl .)


state 9

    (8) var_decl -> VAR . id_list
    (70) id_list -> . IDENT act_insert_prev_var_ident
    (71) id_list -> . id_list COMMA IDENT act_insert_prev_var_ident

    IDENT           shift and go to state 14

    id_list                        shift and go to state 13

state 10

    (1) program -> PROGRAM IDENT SEMICOLON outblock PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENT SEMICOLON outblock PERIOD .)


state 11

    (2) outblock -> var_decl_part act_set_varscope_local . subprog_decl_part outblock_act act_set_varscope_global statement
    (9) subprog_decl_part -> . subprog_decl_list SEMICOLON
    (10) subprog_decl_part -> .
    (11) subprog_decl_list -> . subprog_decl_list SEMICOLON subprog_decl
    (12) subprog_decl_list -> . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) proc_decl -> . PROCEDURE proc_name SEMICOLON inblock

    IDENT           reduce using rule 10 (subprog_decl_part -> .)
    WHILE           reduce using rule 10 (subprog_decl_part -> .)
    FOR             reduce using rule 10 (subprog_decl_part -> .)
    BEGIN           reduce using rule 10 (subprog_decl_part -> .)
    READ            reduce using rule 10 (subprog_decl_part -> .)
    WRITE           reduce using rule 10 (subprog_decl_part -> .)
    IF              reduce using rule 10 (subprog_decl_part -> .)
    PERIOD          reduce using rule 10 (subprog_decl_part -> .)
    PROCEDURE       shift and go to state 19

    subprog_decl_part              shift and go to state 15
    subprog_decl_list              shift and go to state 16
    subprog_decl                   shift and go to state 17
    proc_decl                      shift and go to state 18

state 12

    (4) var_decl_part -> var_decl_list SEMICOLON .
    (6) var_decl_list -> var_decl_list SEMICOLON . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IDENT           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WHILE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FOR             reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    BEGIN           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    READ            reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WRITE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IF              reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    PERIOD          reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    VAR             shift and go to state 9

    var_decl                       shift and go to state 20

state 13

    (8) var_decl -> VAR id_list .
    (71) id_list -> id_list . COMMA IDENT act_insert_prev_var_ident

    SEMICOLON       reduce using rule 8 (var_decl -> VAR id_list .)
    COMMA           shift and go to state 21


state 14

    (70) id_list -> IDENT . act_insert_prev_var_ident
    (72) act_insert_prev_var_ident -> .

    COMMA           reduce using rule 72 (act_insert_prev_var_ident -> .)
    SEMICOLON       reduce using rule 72 (act_insert_prev_var_ident -> .)

    act_insert_prev_var_ident      shift and go to state 22

state 15

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part . outblock_act act_set_varscope_global statement
    (3) outblock_act -> .

    IDENT           reduce using rule 3 (outblock_act -> .)
    WHILE           reduce using rule 3 (outblock_act -> .)
    FOR             reduce using rule 3 (outblock_act -> .)
    BEGIN           reduce using rule 3 (outblock_act -> .)
    READ            reduce using rule 3 (outblock_act -> .)
    WRITE           reduce using rule 3 (outblock_act -> .)
    IF              reduce using rule 3 (outblock_act -> .)
    PERIOD          reduce using rule 3 (outblock_act -> .)

    outblock_act                   shift and go to state 23

state 16

    (9) subprog_decl_part -> subprog_decl_list . SEMICOLON
    (11) subprog_decl_list -> subprog_decl_list . SEMICOLON subprog_decl

    SEMICOLON       shift and go to state 24


state 17

    (12) subprog_decl_list -> subprog_decl .

    SEMICOLON       reduce using rule 12 (subprog_decl_list -> subprog_decl .)


state 18

    (13) subprog_decl -> proc_decl .

    SEMICOLON       reduce using rule 13 (subprog_decl -> proc_decl .)


state 19

    (14) proc_decl -> PROCEDURE . proc_name SEMICOLON inblock
    (15) proc_name -> . IDENT act_insert_prev_proc_ident

    IDENT           shift and go to state 26

    proc_name                      shift and go to state 25

state 20

    (6) var_decl_list -> var_decl_list SEMICOLON var_decl .

    SEMICOLON       reduce using rule 6 (var_decl_list -> var_decl_list SEMICOLON var_decl .)


state 21

    (71) id_list -> id_list COMMA . IDENT act_insert_prev_var_ident

    IDENT           shift and go to state 27


state 22

    (70) id_list -> IDENT act_insert_prev_var_ident .

    COMMA           reduce using rule 70 (id_list -> IDENT act_insert_prev_var_ident .)
    SEMICOLON       reduce using rule 70 (id_list -> IDENT act_insert_prev_var_ident .)


state 23

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act . act_set_varscope_global statement
    (76) act_set_varscope_global -> . act_delete_local_ident
    (77) act_delete_local_ident -> .

    IDENT           reduce using rule 77 (act_delete_local_ident -> .)
    WHILE           reduce using rule 77 (act_delete_local_ident -> .)
    FOR             reduce using rule 77 (act_delete_local_ident -> .)
    BEGIN           reduce using rule 77 (act_delete_local_ident -> .)
    READ            reduce using rule 77 (act_delete_local_ident -> .)
    WRITE           reduce using rule 77 (act_delete_local_ident -> .)
    IF              reduce using rule 77 (act_delete_local_ident -> .)
    PERIOD          reduce using rule 77 (act_delete_local_ident -> .)

    act_set_varscope_global        shift and go to state 28
    act_delete_local_ident         shift and go to state 29

state 24

    (9) subprog_decl_part -> subprog_decl_list SEMICOLON .
    (11) subprog_decl_list -> subprog_decl_list SEMICOLON . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) proc_decl -> . PROCEDURE proc_name SEMICOLON inblock

    IDENT           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WHILE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    FOR             reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    BEGIN           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    READ            reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WRITE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    IF              reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PERIOD          reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PROCEDURE       shift and go to state 19

    subprog_decl                   shift and go to state 30
    proc_decl                      shift and go to state 18

state 25

    (14) proc_decl -> PROCEDURE proc_name . SEMICOLON inblock

    SEMICOLON       shift and go to state 31


state 26

    (15) proc_name -> IDENT . act_insert_prev_proc_ident
    (73) act_insert_prev_proc_ident -> .

    SEMICOLON       reduce using rule 73 (act_insert_prev_proc_ident -> .)

    act_insert_prev_proc_ident     shift and go to state 32

state 27

    (71) id_list -> id_list COMMA IDENT . act_insert_prev_var_ident
    (72) act_insert_prev_var_ident -> .

    COMMA           reduce using rule 72 (act_insert_prev_var_ident -> .)
    SEMICOLON       reduce using rule 72 (act_insert_prev_var_ident -> .)

    act_insert_prev_var_ident      shift and go to state 33

state 28

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global . statement
    (19) statement -> . assignment_statement
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . proc_call_statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) assignment_statement -> . IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident
    (30) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (41) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (43) for_statement -> . FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (46) proc_call_statement -> . proc_call_name
    (51) null_statement -> .
    (48) block_statement -> . BEGIN statement_list END
    (49) read_statement -> . READ LPAREN IDENT act_lookup_prev_ident RPAREN
    (50) write_statement -> . WRITE LPAREN expression RPAREN
    (31) act_generate_labels -> .
    (47) proc_call_name -> . IDENT act_lookup_prev_ident

    IDENT           shift and go to state 44
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    PERIOD          reduce using rule 51 (null_statement -> .)
    BEGIN           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              reduce using rule 31 (act_generate_labels -> .)

    statement                      shift and go to state 34
    assignment_statement           shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    for_statement                  shift and go to state 38
    proc_call_statement            shift and go to state 39
    null_statement                 shift and go to state 40
    block_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    act_generate_labels            shift and go to state 45
    proc_call_name                 shift and go to state 48

state 29

    (76) act_set_varscope_global -> act_delete_local_ident .

    IDENT           reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    WHILE           reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    FOR             reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    BEGIN           reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    READ            reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    WRITE           reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    IF              reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)
    PERIOD          reduce using rule 76 (act_set_varscope_global -> act_delete_local_ident .)


state 30

    (11) subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .

    SEMICOLON       reduce using rule 11 (subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .)


state 31

    (14) proc_decl -> PROCEDURE proc_name SEMICOLON . inblock
    (16) inblock -> . var_decl_part statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    IDENT           reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    SEMICOLON       reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    inblock                        shift and go to state 52
    var_decl_part                  shift and go to state 53
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 32

    (15) proc_name -> IDENT act_insert_prev_proc_ident .

    SEMICOLON       reduce using rule 15 (proc_name -> IDENT act_insert_prev_proc_ident .)


state 33

    (71) id_list -> id_list COMMA IDENT act_insert_prev_var_ident .

    COMMA           reduce using rule 71 (id_list -> id_list COMMA IDENT act_insert_prev_var_ident .)
    SEMICOLON       reduce using rule 71 (id_list -> id_list COMMA IDENT act_insert_prev_var_ident .)


state 34

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement .

    PERIOD          reduce using rule 2 (outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement .)


state 35

    (19) statement -> assignment_statement .

    PERIOD          reduce using rule 19 (statement -> assignment_statement .)
    END             reduce using rule 19 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 19 (statement -> assignment_statement .)
    ELSE            reduce using rule 19 (statement -> assignment_statement .)


state 36

    (20) statement -> if_statement .

    PERIOD          reduce using rule 20 (statement -> if_statement .)
    END             reduce using rule 20 (statement -> if_statement .)
    SEMICOLON       reduce using rule 20 (statement -> if_statement .)
    ELSE            reduce using rule 20 (statement -> if_statement .)


state 37

    (21) statement -> while_statement .

    PERIOD          reduce using rule 21 (statement -> while_statement .)
    END             reduce using rule 21 (statement -> while_statement .)
    SEMICOLON       reduce using rule 21 (statement -> while_statement .)
    ELSE            reduce using rule 21 (statement -> while_statement .)


state 38

    (22) statement -> for_statement .

    PERIOD          reduce using rule 22 (statement -> for_statement .)
    END             reduce using rule 22 (statement -> for_statement .)
    SEMICOLON       reduce using rule 22 (statement -> for_statement .)
    ELSE            reduce using rule 22 (statement -> for_statement .)


state 39

    (23) statement -> proc_call_statement .

    PERIOD          reduce using rule 23 (statement -> proc_call_statement .)
    END             reduce using rule 23 (statement -> proc_call_statement .)
    SEMICOLON       reduce using rule 23 (statement -> proc_call_statement .)
    ELSE            reduce using rule 23 (statement -> proc_call_statement .)


state 40

    (24) statement -> null_statement .

    PERIOD          reduce using rule 24 (statement -> null_statement .)
    END             reduce using rule 24 (statement -> null_statement .)
    SEMICOLON       reduce using rule 24 (statement -> null_statement .)
    ELSE            reduce using rule 24 (statement -> null_statement .)


state 41

    (25) statement -> block_statement .

    PERIOD          reduce using rule 25 (statement -> block_statement .)
    END             reduce using rule 25 (statement -> block_statement .)
    SEMICOLON       reduce using rule 25 (statement -> block_statement .)
    ELSE            reduce using rule 25 (statement -> block_statement .)


state 42

    (26) statement -> read_statement .

    PERIOD          reduce using rule 26 (statement -> read_statement .)
    END             reduce using rule 26 (statement -> read_statement .)
    SEMICOLON       reduce using rule 26 (statement -> read_statement .)
    ELSE            reduce using rule 26 (statement -> read_statement .)


state 43

    (27) statement -> write_statement .

    PERIOD          reduce using rule 27 (statement -> write_statement .)
    END             reduce using rule 27 (statement -> write_statement .)
    SEMICOLON       reduce using rule 27 (statement -> write_statement .)
    ELSE            reduce using rule 27 (statement -> write_statement .)


state 44

    (28) assignment_statement -> IDENT . act_lookup_prev_ident ASSIGN expression act_assign_ident
    (47) proc_call_name -> IDENT . act_lookup_prev_ident
    (74) act_lookup_prev_ident -> .

    ASSIGN          reduce using rule 74 (act_lookup_prev_ident -> .)
    PERIOD          reduce using rule 74 (act_lookup_prev_ident -> .)
    END             reduce using rule 74 (act_lookup_prev_ident -> .)
    SEMICOLON       reduce using rule 74 (act_lookup_prev_ident -> .)
    ELSE            reduce using rule 74 (act_lookup_prev_ident -> .)

    act_lookup_prev_ident          shift and go to state 54

state 45

    (30) if_statement -> act_generate_labels . IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3

    IF              shift and go to state 55


state 46

    (41) while_statement -> WHILE . act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (31) act_generate_labels -> .

    MINUS           reduce using rule 31 (act_generate_labels -> .)
    LPAREN          reduce using rule 31 (act_generate_labels -> .)
    IDENT           reduce using rule 31 (act_generate_labels -> .)
    NUMBER          reduce using rule 31 (act_generate_labels -> .)

    act_generate_labels            shift and go to state 56

state 47

    (43) for_statement -> FOR . act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (31) act_generate_labels -> .

    IDENT           reduce using rule 31 (act_generate_labels -> .)

    act_generate_labels            shift and go to state 57

state 48

    (46) proc_call_statement -> proc_call_name .

    PERIOD          reduce using rule 46 (proc_call_statement -> proc_call_name .)
    END             reduce using rule 46 (proc_call_statement -> proc_call_name .)
    SEMICOLON       reduce using rule 46 (proc_call_statement -> proc_call_name .)
    ELSE            reduce using rule 46 (proc_call_statement -> proc_call_name .)


state 49

    (48) block_statement -> BEGIN . statement_list END
    (17) statement_list -> . statement_list SEMICOLON statement
    (18) statement_list -> . statement
    (19) statement -> . assignment_statement
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . proc_call_statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) assignment_statement -> . IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident
    (30) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (41) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (43) for_statement -> . FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (46) proc_call_statement -> . proc_call_name
    (51) null_statement -> .
    (48) block_statement -> . BEGIN statement_list END
    (49) read_statement -> . READ LPAREN IDENT act_lookup_prev_ident RPAREN
    (50) write_statement -> . WRITE LPAREN expression RPAREN
    (31) act_generate_labels -> .
    (47) proc_call_name -> . IDENT act_lookup_prev_ident

    IDENT           shift and go to state 44
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    END             reduce using rule 51 (null_statement -> .)
    SEMICOLON       reduce using rule 51 (null_statement -> .)
    BEGIN           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              reduce using rule 31 (act_generate_labels -> .)

    statement_list                 shift and go to state 58
    statement                      shift and go to state 59
    assignment_statement           shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    for_statement                  shift and go to state 38
    proc_call_statement            shift and go to state 39
    null_statement                 shift and go to state 40
    block_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    act_generate_labels            shift and go to state 45
    proc_call_name                 shift and go to state 48

state 50

    (49) read_statement -> READ . LPAREN IDENT act_lookup_prev_ident RPAREN

    LPAREN          shift and go to state 60


state 51

    (50) write_statement -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 61


state 52

    (14) proc_decl -> PROCEDURE proc_name SEMICOLON inblock .

    SEMICOLON       reduce using rule 14 (proc_decl -> PROCEDURE proc_name SEMICOLON inblock .)


state 53

    (16) inblock -> var_decl_part . statement
    (19) statement -> . assignment_statement
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . proc_call_statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) assignment_statement -> . IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident
    (30) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (41) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (43) for_statement -> . FOR act_generate_labels IDENT act_lookup_prev_ident ASSIGN expression act_assign_ident act_insert_jump1 act_insert_label1 TO expression act_insert_br_for act_insert_label2 DO statement act_increment_itr act_insert_jump1 act_insert_label3
    (46) proc_call_statement -> . proc_call_name
    (51) null_statement -> .
    (48) block_statement -> . BEGIN statement_list END
    (49) read_statement -> . READ LPAREN IDENT act_lookup_prev_ident RPAREN
    (50) write_statement -> . WRITE LPAREN expression RPAREN
    (31) act_generate_labels -> .
    (47) proc_call_name -> . IDENT act_lookup_prev_ident

    IDENT           shift and go to state 44
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    SEMICOLON       reduce using rule 51 (null_statement -> .)
    BEGIN           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              reduce using rule 31 (act_generate_labels -> .)

    statement                      shift and go to state 62
    assignment_statement           shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    for_statement                  shift and go to state 38
    proc_call_statement            shift and go to state 39
    null_statement                 shift and go to state 40
    block_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    act_generate_labels            shift and go to state 45
    proc_call_name                 shift and go to state 48

state 54

    (28) assignment_statement -> IDENT act_lookup_prev_ident . ASSIGN expression act_assign_ident
    (47) proc_call_name -> IDENT act_lookup_prev_ident .

    ASSIGN          shift and go to state 63
    PERIOD          reduce using rule 47 (proc_call_name -> IDENT act_lookup_prev_ident .)
    END             reduce using rule 47 (proc_call_name -> IDENT act_lookup_prev_ident .)
    SEMICOLON       reduce using rule 47 (proc_call_name -> IDENT act_lookup_prev_ident .)
    ELSE            reduce using rule 47 (proc_call_name -> IDENT act_lookup_prev_ident .)


state 55
